API/k8s/environments/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sponspay-api-dev
  labels:
    name: sponspay-api-dev
    environment: development
