API/k8s/environments/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sponspay-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        environment: development
    spec:
      containers:
      - name: api
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
