API/k8s/environments/dev/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: sponspay-api-service
  labels:
    environment: development
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"sponspay-api-config"}}'
