API/k8s/environments/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-sponspay-api-ingress
  namespace: sponspay-api-dev
  labels:
    environment: development
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "dev-sponspay-api-ip"
    networking.gke.io/managed-certificates: "dev-sponspay-api-cert"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
spec:
  defaultBackend:
    service:
      name: sponspay-api-service
      port:
        number: 80
